Merge with Retry and Schema Registry Testing